# data-elements

./: .gitignore  AUTHORS  COPYING  ChangeLog  LICENSE  Makefile.am  README  configure.ac
doc/: AdminGuide.md  AdminGuide_1.2.0.md  HOWTO_FlashTheNetgearWNDR3800.md  HOWTO_build_flashable_image.md  HOWTO_build_machine.md  HOWTO_build_wccf.md  HOWTO_start_here.md  HOWTO_update_ap_config.md  ReleaseNotes.md  SampleSensor_44:94:fc:73:55:cd_scan-wlan0_2017013023400200.json  SampleSensor_44:94:fc:73:55:cd_station-wlan0_2017013017550000.json  SampleSensor_44:94:fc:73:55:cd_survey-wlan0_2017013023550100.json  Sample_wccf_sensor_channel.json  Sample_wccf_sensor_interface.json  Sample_wccf_sensor_phycapa.json  Sample_wccf_sensor_scan.json  Sample_wccf_sensor_station.json  wccf-2.0-sample-full.json
doc/openwrt_configs/: README  catall.sh  openwrt_default_configs.out
processors/: Makefile.am  WCCFProcMultiAP.cpp  WCCFProcMultiAP.h  wccf_proc.h  wccf_proc_multiap.cpp  wccf_proc_multiap.h  wccf_proc_null.c  wccf_proc_null.h
qa/results_20170131/: README  wccf_qa_all_sensors.out
qa/sensors/: catall.sh  format_json_output.sh  metrics.txt  scan_slow.sh  scan_slow_short.sh  sensor_field_check.sh  wccf_qa_all_sensors.sh  wccf_qa_do_all_sensors.sh  wccf_sensor_track_reboots
qa/sensors/wccf_sensor_test_output_v1.3.0/ArcherC7/wccf/: 18:d6:c7:6d:5a:27_channel-wlan1_2017031419321500.json  18:d6:c7:6d:5a:27_interface_2017031419321500.json  18:d6:c7:6d:5a:27_scan-wlan0_2017031419321300.json  18:d6:c7:6d:5a:27_scan-wlan1_2017031419321500.json  18:d6:c7:6d:5a:27_station-wlan1_2017031419321500.json  formatted_output
qa/sensors/wccf_sensor_test_output_v1.3.0/WNDR3800/wccf/: 44:94:fc:73:55:cd_channel-wlan0_2017031420005600.json  44:94:fc:73:55:cd_channel-wlan1_2017031420005600.json  44:94:fc:73:55:cd_interface_2017031420005700.json  44:94:fc:73:55:cd_scan-wlan0_2017031420005400.json  44:94:fc:73:55:cd_scan-wlan1_2017031420005600.json  44:94:fc:73:55:cd_station-wlan0_2017031420005600.json  44:94:fc:73:55:cd_station-wlan1_2017031420005600.json  formatted_output
qa/sensors/wccf_sensor_test_output_v1.4.0/ArcherC7/: 18:d6:c7:f9:87:49_channel-wlan0_2017042820100000.json  18:d6:c7:f9:87:49_channel-wlan1_2017042820100000.json  18:d6:c7:f9:87:49_event-wlan0_2017042820050300.json  18:d6:c7:f9:87:49_event-wlan0_2017042820052800.json  18:d6:c7:f9:87:49_interface_2017042820100000.json  18:d6:c7:f9:87:49_phycapa-wlan0_2017042820100000.json  18:d6:c7:f9:87:49_phycapa-wlan1_2017042820100000.json  18:d6:c7:f9:87:49_scan-wlan0_2017042820100200.json  18:d6:c7:f9:87:49_scan-wlan1_2017042820100200.json  18:d6:c7:f9:87:49_station-wlan0_2017042820100000.json  18:d6:c7:f9:87:49_station-wlan1_2017042820100000.json  sensor_field_check.out
qa/updater/: README  cron_timeshift.sh  delayed_reboot.sh  reflash_ap.sh  wccf_sensors.cron.TIMESHIFT  wccf_util_update_worker.sh.REFLASH  wccf_util_update_worker.sh.TIMESHIFT
qa/utilities/: NETGEAR.config  README.md  TP-LINK.config  build_ap_image.sh  build_openwrt.sh  build_wccf.sh  full_build.sh
receiver/: wccf_rx_rest.py
sensors/: Makefile.am  format_time.c  format_time.h  wccf_sensor.h  wccf_sensor_channel.c  wccf_sensor_channel.h  wccf_sensor_event.c  wccf_sensor_event.h  wccf_sensor_interface.c  wccf_sensor_interface.h  wccf_sensor_phycapa.c  wccf_sensor_phycapa.h  wccf_sensor_scan.c  wccf_sensor_scan.h  wccf_sensor_station.c  wccf_sensor_station.h  wccf_sensor_survey.c  wccf_sensor_survey.h
targets/openwrt/: Makefile.template  README_setup.md
targets/openwrt/patches/: 001-nl80211_h_sync.patch
test/: testb64.c
transmitters/: Makefile.am  wccf_tx.h  wccf_tx_rest.c  wccf_tx_rest.h
utils/: Makefile.am  wccf_config_sync.cfg.in  wccf_config_sync.sh.in  wccf_jobs.cron.in  wccf_openwrt_privkey.in  wccf_openwrt_pubkey.in  wccf_proc_multiap.cfg.in  wccf_proc_multiap.in  wccf_proc_null.cfg.in  wccf_proc_null.in  wccf_sensor_event.cfg.in  wccf_sensor_event.in  wccf_sensors.cron.in  wccf_tx_rest.cfg.in  wccf_tx_rest.in  wccf_util_purge.sh.in  wccf_util_update.sh.in  wccf_util_update_worker.sh.in
utils/config_files/netgear/: README_config_files  copy_configs.sh  firewall  network  shadow  wireless
utils/config_files/tp-link/: README_config_files  copy_configs.sh  firewall  network  shadow  wireless
